--- a/flutter_inicio/pubspec.yaml
+++ b/flutter_inicio/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.10+1
+  logger: ^2.4.0
 
 dev_dependencies:
   flutter_test:
@@ -21,7 +22,13 @@ flutter:
       - assets/icons/i_1.svg
       - assets/icons/i_2.svg
       - assets/icons/i_3.svg
-    
+  
+  fonts:
+    - family: PerfectBomber
+      fonts:
+        - asset: assets/fonts/Perfect Bomber.ttf
+        - asset: assets/fonts/Perfect Bomber.ttf
+          style: italic
   
   uses-material-design: true
 
