--- a/flutter_inicio/pubspec.yaml
+++ b/flutter_inicio/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
   logger: ^2.4.0
   provider: ^6.1.2
   shared_preferences: ^2.3.2
+  sqflite: ^2.4.0
+  path: ^1.9.0
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
